--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,20 +1,15 @@
-<!-- templates/base.html -->
 <!DOCTYPE html> 
 <html lang="ru">          
   <head> 
-    <!-- Импорт статиков -->
     {% load static %}
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
     <link rel="icon" href={% static "favicon.ico" type="image" %}>
     <link rel="apple-touch-icon" sizes="180x180" href={% static "img/fav/apple-touch-icon.png" %}>
     <link rel="icon" type="image/png" sizes="32x32" href={% static "img/fav/favicon-32x32.png" %}>
     <link rel="icon" type="image/png" sizes="16x16" href={% static "img/fav/favicon-16x16.png" %}>
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
     <title>
       {% block title %} Назввание заголовка {% endblock %} | Yatube
@@ -22,20 +17,14 @@
   </head>
   <body>       
     <header>
-      <!-- Импорт хедера -->
       {% include 'includes/header.html' %}
     </header>
     <main>
-      <!-- Блок с контентом -->
       <div class="container">
         {% block content %}
-         <!-- Содержимое страницы -->
         {% endblock%}
       </div>
     </main>
-    <footer>
-      <!-- Импорт футера -->
       {% include 'includes/footer.html' %} 
-    </footer>
   </body>
 </html>
