--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %} Записи сообщества {{ group }}{% endblock %}
+{% block title %} Записи сообщества {{ group.title }}{% endblock %}
 {% block content %}
-<h1> {{ group }} </h1>
+<h1> {{ group.title }} </h1>
 <p> {{ group.description }} </p>
 <article>
   {% for post in posts %}
