--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -4,7 +4,7 @@
 <h1> {{ group.title }} </h1>
 <p> {{ group.description }} </p>
 <article>
-  {% for post in posts %}
+  {% for post in page_obj %}
     <ul>
       <li>
         Автор: {{ post.author.get_full_name }}
@@ -16,4 +16,5 @@
     <p>{{ post.text }}</p> 
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %} 
