--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block title %} Последние обновления на сайте {% endblock %}
 <main>
-  {% block content %}
-  <div class="container py-5">     
+  {% block content %}   
     <h1>Последние обновления на сайте</h1>
     <article>
-      {% for post in posts %}
+      {% for post in page_obj %}
         <ul>
           <li>
             Автор: {{ post.author.get_full_name }}
@@ -19,6 +18,7 @@
         <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a> 
         {% endif %}
         {% if not forloop.last %}<hr>{% endif %}
-      {% endfor %}    
+      {% endfor %}  
+      {% include 'posts/includes/paginator.html' %}  
   {% endblock %} 
 </main>
