--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,40 +1,33 @@
 {% extends "base.html" %}
-{% block title %} Профиль {% endblock %}
+{% block title %} Профайл пользователя {{ user.get_full_name }} {% endblock %}
 {% block content %} 
 <main>
-    <div class="row">
-      <aside class="col-12 col-md-3">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            Дата публикации: {{ post.pub_date|date:"d E Y" }} 
-          </li>
-          <!-- если у поста есть группа -->  
-          {% if post.group %}
-          <li class="list-group-item">
-            Группа: {{ post.group.title }}
-            <a href="{% url 'group_posts' post.group.slug %}">
-              все записи группы
-            </a>
-          </li>
-          {% endif %}
-          <li class="list-group-item">
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Всего постов автора:  <span>{{ post.author.post_count }}</span>
-          </li>
-          <li class="list-group-item">
-            <a href="{% url 'posts:group_list' post.group.slug %}">
-              все посты пользователя
-            </a>
-          </li>
-        </ul>
-      </aside>
-      <article class="col-12 col-md-9">
-        <p>
-          {{ post.text|safe }}
-        </p>
-      </article>
-    </div> 
-  </main>
-{% endblock %} 
+  <div class="container py-5">        
+    <h1>Все посты пользователя {{ user.get_full_name }}</h1>
+    <h3>Всего постов: {{ post_count }}</h3>   
+    {% for post in page_obj %}
+    <article>
+      <ul>
+        <li>
+          Автор: {{ user.get_full_name }}
+          <a href="{% url 'posts:profile' post.author.username %}">
+            все посты пользователя
+          </a>
+        </li>
+        <li>
+          Дата публикации: {{ post.pub_date|date:"d E Y" }} 
+        </li>
+      </ul>
+      <p>
+        {{ post.text|safe }}
+      </p>
+      <a href="{% url 'posts:post_detail' post.id %}">
+        подробная информация 
+      </a>
+    </article>
+    <hr>
+    {% endfor %}
+    {% include 'posts/includes/paginator.html' %}  
+  </div>
+</main>
+{% endblock %}
