--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,3 +1,4 @@
+<header>
 <nav class="navbar navbar-light" style="background-color: lightskyblue">
   <div class="container">
     <a class="navbar-brand" href="{% url 'posts:index' %}">
@@ -5,6 +6,5 @@
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
       <span style="color:red">Ya</span>tube</a>
     </a>
-  </div>
-</nav>     
-<div class="container py-3">
+
+</header>
