--- a/yatube/templates/posts/includes/paginator.html
+++ b/yatube/templates/posts/includes/paginator.html
@@ -9,7 +9,7 @@
       <li class="page-item"><a class="page-link" href="?page=1">Первая</a></li>
       <li class="page-item">
         <a class="page-link" href="?page={{ page_obj.previous_page_number }}">
-          Предыдущая
+          Назад
         </a>
       </li>
     {% endif %}
@@ -27,7 +27,7 @@
     {% if page_obj.has_next %}
       <li class="page-item">
         <a class="page-link" href="?page={{ page_obj.next_page_number }}">
-          Следующая
+          Вперед
         </a>
       </li>
       <li class="page-item">
