--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -6,5 +6,8 @@
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
       <span style="color:red">Ya</span>tube</a>
     </a>
+  </div>
+</nav>     
+<div class="container py-3"> <!-- Отступ 3, не убирать. -->
 
 </header>
