--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,20 +1,22 @@
 {% extends "base.html" %}
-{% block title %} Пост детейл {{ post.text|truncatechars:limit }}{% endblock %}
+{% block title %} Пост детейл {{ post.text|slice:":30" }}{% endblock %}
 {% block content %} <main>
     <div class="row">
       <aside class="col-12 col-md-3">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            Дата публикации: {{ post.pub_date|date:"d E Y" }} <!-- замените значение на дату публикации поста -->
+            Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
           {% if post.group %}
           <li class="list-group-item">
-            Группа: {{ group.title }}
-            <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+            Группа: {{ post.group.title }}
+            <a href="{% url 'posts:group_list' post.group.slug %}">
+              <br> все записи группы
+            </a>
           </li>
           {% endif %}
           <li class="list-group-item">
-            Автор: {{ post.author.username }}
+            Автор: {{ post.author.get_full_name }}
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Всего постов автора:  <span>{{ post_count }}</span>
