--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -7,7 +7,42 @@
       <span style="color:red">Ya</span>tube</a>
     </a>
   </div>
-</nav>     
+</nav>  
+ {% comment %}
+      Меню - список пунктов со стандартными классами Bootsrap.
+      Класс nav-pills нужен для выделения активных пунктов 
+      {% endcomment %}
+      <ul class="nav nav-pills">
+        <li class="nav-item"> 
+          <a class="nav-link" href="{% url 'about:author' %}">Об авторе</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about:tech' %}">Технологии</a>
+        </li>
+        {% <!-- Проверка: авторизован ли пользователь? --> %}
+        <li class="nav-item"> 
+          <a class="nav-link" href="<!--  -->">Новая запись</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light" href="<!--  -->">Изменить пароль</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light" href="<!--  -->">Выйти</a>
+        </li>
+        <li>
+          Пользователь: {{ user.username }}
+        </li>
+        {% else %}
+        <li class="nav-item"> 
+          <a class="nav-link link-light" href="<!--  -->">Войти</a>
+        </li>
+        <li class="nav-item"> 
+          <a class="nav-link link-light" href="<!--  -->">Регистрация</a>
+        </li>
+        {% endif %}
+      </ul>
+      {# Конец добавленого в спринте #}
+    </div>
+  </nav>        
 <div class="container py-3"> <!-- Отступ 3, не убирать. -->
-
 </header>
