Подошли к финальному заданию спринта.

--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -2,79 +2,6 @@
 {% extends "base.html" %}
 {% block title %}Об авторе проекта{% endblock %}
 {% block content %}
- <style>
-  body {
-   font-family: Arial, sans-serif;
-   background-color: #f0f0f0;
-   color: #333;
-   margin: 0;
-   padding: 0;
-  }
-
-  .container {
-   max-width: 960px;
-   margin: 0 auto;
-   padding: 20px;
-  }
-
-  h1 {
-   font-size: 36px;
-   margin-bottom: 10px;
-  }
-
-  h2 {
-   font-size: 24px;
-   margin-bottom: 10px;
-  }
-
-  p {
-   font-size: 18px;
-   margin-bottom: 20px;
-  }
-
-  a {
-   color: #333;
-  }
-
-  a:hover {
-   color: #999;
-  }
-
-  .social {
-   margin-top: 30px;
-  }
-
-  .social a {
-   display: inline-block;
-   font-size: 20px;
-   margin-right: 10px;
-   color: #333;
-   text-decoration: none;
-   transition: color 0.2s;
-  }
-
-  .social a:hover {
-   color: #999;
-  }
-
-  .github {
-   background: url('https://image.flaticon.com/icons/svg/37/37318.svg') no-repeat;
-   background-size: 24px 24px;
-   padding-left: 30px;
-  }
-
-  .telegram {
-   background: url('https://image.flaticon.com/icons/svg/1039/1039328.svg') no-repeat;
-   background-size: 24px 24px;
-   padding-left: 30px;
-  }
-
-  .linkedin {
-   background: url('https://image.flaticon.com/icons/svg/174/174857.svg') no-repeat;
-   background-size: 24px 24px;
-   padding-left: 30px;
-  }
- </style>
 </head>
 <body>
  <div class="container">
@@ -90,4 +17,5 @@
  </div>
 </body>
 </html>
+<div class="container py-3">
 {% endblock %}
