--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="ru">          
   <head> 
     {% load static %}
+    {% load bootstrap4 %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href={% static "favicon.ico" type="image" %}>
@@ -10,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href={% static "img/fav/favicon-16x16.png" %}>
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
     <title>
       {% block title %} Назввание заголовка {% endblock %} | Yatube
