--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,48 +1,49 @@
+{% load static %}
+
 <header>
-<nav class="navbar navbar-light" style="background-color: lightskyblue">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'posts:index' %}">
-      {% load static %}
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightskyblue">
+    <div class="container">
+      <a class="navbar-brand" href="{% url 'posts:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-      <span style="color:red">Ya</span>tube</a>
-    </a>
-  </div>
-</nav>  
- {% comment %}
-      Меню - список пунктов со стандартными классами Bootsrap.
-      Класс nav-pills нужен для выделения активных пунктов 
-      {% endcomment %}
-      <ul class="nav nav-pills">
-        <li class="nav-item"> 
-          <a class="nav-link" href="{% url 'about:author' %}">Об авторе</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'about:tech' %}">Технологии</a>
-        </li>
-        {% <!-- Проверка: авторизован ли пользователь? --> %}
-        <li class="nav-item"> 
-          <a class="nav-link" href="<!--  -->">Новая запись</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Изменить пароль</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Выйти</a>
-        </li>
-        <li>
-          Пользователь: {{ user.username }}
-        </li>
-        {% else %}
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Войти</a>
-        </li>
-        <li class="nav-item"> 
-          <a class="nav-link link-light" href="<!--  -->">Регистрация</a>
-        </li>
-        {% endif %}
-      </ul>
-      {# Конец добавленого в спринте #}
+        <span style="color:red">Ya</span>tube
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>    
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          {% with request.resolver_match.view_name as view_name %} 
+          <li class="nav-item"> 
+            <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}">Об авторе</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}">Технологии</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item"> 
+            <a class="nav-link" href="">Новая запись</a>
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link {% if view_name  == 'users:password_change' %}active{% endif %}" href="{% url 'users:password_change' %}">Изменить пароль</a>
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" href="{% url 'users:logout' %}">Выйти</a>
+          </li>
+          <li class="nav-item">
+            <span class="nav-link">Пользователь: {{ user.username }}</span>
+          </li>
+          {% else %}
+          <li class="nav-item"> 
+            <a class="nav-link {% if view_name  == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}">Войти</a>
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link {% if view_name  == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
+          </li>
+          {% endif %}
+          {% endwith %} 
+        </ul>
+      </div>
     </div>
-  </nav>        
-<div class="container py-3"> <!-- Отступ 3, не убирать. -->
+  </nav>
+  <div class="container py-3">
 </header>
