--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -30,7 +30,7 @@
                   Группа
                 </label>
                 <select name="group" class="form-control" id="id_group">
-                  <option value="" selected>Выберите группу</option>
+                  <option value="" selected>---------</option>
                   {% for group in groups %}
                   <option value="{{ group.id }}">{{ group.title }}</option>
                   {% endfor %}
