--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,23 +6,7 @@
     <h3>Всего постов: {{ post_count }}</h3>   
     {% for post in page_obj %}
     <article>
-      <ul>
-        <li>
-          Автор: {{ user.get_full_name }}
-          <a href="{% url 'posts:profile' post.author.username %}">
-            все посты пользователя
-          </a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }} 
-        </li>
-      </ul>
-      <p>
-        {{ post.text|safe }}
-      </p>
-      <a href="{% url 'posts:post_detail' post.id %}">
-        подробная информация 
-      </a>
+      {% include 'posts/includes/post_core.html' %}
     </article>
     <hr>
     {% endfor %}
