--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -2,7 +2,6 @@
 <html lang="ru">          
   <head> 
     {% load static %}
-    {% load bootstrap4 %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href={% static "favicon.ico" type="image" %}>
@@ -12,7 +11,8 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
     <title>
       {% block title %} Назввание заголовка {% endblock %} | Yatube
     </title>
