--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -51,7 +51,9 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle {% if view_name  == 'users:profile' %} active {% endif %}" href="#" data-bs-toggle="dropdown" aria-expanded="false">Пользователь: {{ user.username }}</a>
+              <a class="nav-link dropdown-toggle {% if view_name  == 'users:profile' %} 
+              active {% endif %}" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+              Пользователь: {{ user.username }}</a>
             </li>
           <!-- Меню для неавторизованного пользователя -->
           {% else %}
