--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,47 +1,37 @@
 {% extends "base.html" %}
 
-{% block title %} Новый пост {% endblock %}
+{% block title %}
+    {% if is_edit %}
+        Редактировать запись
+    {% else %}
+        Добавить запись
+    {% endif %}
+{% endblock %}
 
 {% block content %}
-
 <main>
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-md-8 p-5">
         <div class="card">
-          <div class="card-header">
-            Новый пост
+          <div class="card-header">       
+            {% if is_edit %}
+              Редактировать пост             
+            {% else %}
+              Добавить пост
+            {% endif %}        
           </div>
-          <div class="card-body">
-            <form method="post" action="{% url 'posts:post_create' %}">
+          <div class="card-body">        
+            <form method="post" action="{% url 'posts:post_edit' post_id=post.id %}">
               {% csrf_token %}
-              <div class="form-group row my-3 p-3">
-                <label for="id_text">
-                  Текст поста
-                  <span class="required text-danger">*</span>
-                </label>
-                <textarea name="text" cols="40" rows="10" class="form-control" required id="id_text"></textarea>
-                <small id="id_text-help" class="form-text text-muted">
-                  Текст нового поста
-                </small>
-              </div>
-              <div class="form-group row my-3 p-3">
-                <label for="id_group">
-                  Группа
-                </label>
-                <select name="group" class="form-control" id="id_group">
-                  <option value="" selected>---------</option>
-                  {% for group in groups %}
-                  <option value="{{ group.id }}">{{ group.title }}</option>
-                  {% endfor %}
-                </select>
-                <small id="id_group-help" class="form-text text-muted">
-                  Группа, к которой будет относиться пост
-                </small>
-              </div>
+              {{ form.as_p }}
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">
-                  Сохранить
+                  {% if is_edit %}
+                    Сохранить
+                  {% else %}
+                    Добавить
+                  {% endif %}               
                 </button>
               </div>
             </form>
