Починил форму создания нового поста.

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -24,7 +24,7 @@
           <div class="card-body">        
             <form method="post" {% if post_id %}action="{% url 'posts:post_edit' post_id=post_id %}"{% endif %}>
               {% csrf_token %}
-              {{ post_form.as_p }}
+              {{ form.as_p }}
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">
                   {% if is_edit %}
